# python-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
docs/: api.md  usage.md
src/mypackage/: __init__.py  api.py  cli.py  config.py  main.py
src/mypackage/core/: __init__.py  custom_thing.py
src/mypackage/models/: __init__.py  types.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_core.py
